objects/project_cloud__Work__c.object
<CustomObject>
    <description>Record time or create allocations against any object, by adding a lookup to that Object.
Replacement for the Time Entry Object.</description>
    <fields>
        <fullName>ccpe_bmc__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_bmc__Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_bmc__Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Cost__c</fullName>
        <formula>ccpe_r__Hourly_Cost__c * project_cloud__Hours__c</formula>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hourly_Cost__c</fullName>
        <label>Hourly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate__c</fullName>
        <formula>ccpe_r__Hourly_Rate__c * project_cloud__Hours__c * IF(ISBLANK(ccpe_r__Multiplier__c), 1, ccpe_r__Multiplier__c)</formula>
        <label>Calculated Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Retainer_Line_Item_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retainer Line Item</label>
        <referenceTo>ccpe_r__Retainer_Line_Item__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Timesheet_Start__c</fullName>
        <description>This field is required to calculate the Utilization Hash. It is a convenience field that is used to save 2 queries in the trigger by having the value available on the Time Entry object.</description>
        <formula>project_cloud__Timesheet__r.project_cloud__Start__c</formula>
        <inlineHelpText>This is a System field and Should not be visible.</inlineHelpText>
        <label>Timesheet Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Utilization_Category__c</fullName>
        <label>Utilization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Allocation_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a system field that allows a rollup of worked hours against a given allocation</description>
        <label>Allocation</label>
        <referenceTo>project_cloud__Allocation__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__HHmm__c</fullName>
        <description>Alternative input for entering time using the HH:mm:ss format. This value is converted to a decimal and overwrites any value in the Hours__c field.</description>
        <inlineHelpText>If setting this value the value in the Hours field is overwritten</inlineHelpText>
        <label>Hours</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hash__c</fullName>
        <formula>CASESAFEID(project_cloud__Parent__c) &amp; CASESAFEID(RecordTypeId) &amp; CASESAFEID(OwnerId) &amp; TEXT(project_cloud__Date__c)</formula>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours__c</fullName>
        <label>Hours (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parent__c</fullName>
        <description>The Id of the Parent Object the Work is related to</description>
        <label>Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project (Rollup)</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Work (Rollup)</relationshipLabel>
        <relationshipName>Work_Rollup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Owner_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner (Lookup)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Owner_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Owner__c</fullName>
        <description>This field is used as part of a Customer&apos;s Time Entry (Work) approval process. (The Id is used instead of the Owners Name as the Id is fixed and not prone to introducing errors by accidental editing)</description>
        <formula>CASESAFEID(project_cloud__Project_CCPE_Ignore__r.OwnerId)</formula>
        <inlineHelpText>This field is used as part of a Customer&apos;s Time Entry (Work) approval process.</inlineHelpText>
        <label>Project Owner Id (For Time Approvals)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase (Rollup)</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Work (Rollup)</relationshipLabel>
        <relationshipName>Work_Rollup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Rollup_Name__c</fullName>
        <description>The TimeEntryConfiguration trigger copies the name of the parent Project if it exists to this field.</description>
        <inlineHelpText>If the Time Entry is related to a Project object, the name of the Project is copied to this field. This is intended for reporting uses</inlineHelpText>
        <label>Deprecated (Project Rollup, use lookup)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task_CCPE_Ignore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task (Rollup)</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Work (Rollup)</relationshipLabel>
        <relationshipName>Work_Rollup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket</label>
        <referenceTo>project_cloud__Ticket__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Timesheet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>project_cloud__Timesheet__c</referenceTo>
        <relationshipLabel>Work Entries</relationshipLabel>
        <relationshipName>Work_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work</label>
    <listViews>
        <fullName>RF_CoreProjectTeam_Work</fullName>
        <filterScope>Queue</filterScope>
        <label>RF-Core Project Team</label>
        <queue>RF_CoreProjectTeam</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>project_cloud__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{000000000}</displayFormat>
        <label>Work Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work</pluralLabel>
    <recordTypes>
        <fullName>project_cloud__Allocation</fullName>
        <active>true</active>
        <description>Calendar Allocations are for allocating a project task to a user for a certain number of hours on a certain day</description>
        <label>Calendar Allocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Subscription</fullName>
        <active>true</active>
        <description>Subscriptions are for assigning a person or team to a Project, Project Phase or Project Task, thus making it visible on their Collaboration Tab</description>
        <label>Subscription</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Time_Entry</fullName>
        <active>true</active>
        <description>Time Entries are records of actual work completed by a person. They can be related to any object.</description>
        <label>Time Entry</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>project_cloud__Project_Owner__c</fullName>
        <label>Project Owner</label>
    </sharingReasons>
    <validationRules>
        <fullName>project_cloud__Allocations_Must_Have_Date</fullName>
        <active>true</active>
        <description>Allocations require a Date to be selected</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Allocation&apos; &amp;&amp; ISBLANK(project_cloud__Date__c)</errorConditionFormula>
        <errorDisplayField>project_cloud__Date__c</errorDisplayField>
        <errorMessage>Allocations require a Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Allocations_Must_Have_Hours</fullName>
        <active>true</active>
        <description>Allocations require an hours value greater than 0</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Allocation&apos; &amp;&amp; NOT(project_cloud__Hours__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>project_cloud__Hours__c</errorDisplayField>
        <errorMessage>Allocations require an hours value greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Allocations_Project_Tasks_Only</fullName>
        <active>true</active>
        <description>Calendar Allocations can only be created against Project Tasks</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Allocation&apos; &amp;&amp; ISBLANK(project_cloud__Project_Task__c)</errorConditionFormula>
        <errorMessage>Allocations can only be created for Project Tasks</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Record_Type_Matches_Deprecated_Type</fullName>
        <active>true</active>
        <description>To prevent users from setting the type on a work object without setting the record type (through the data loader or api) The type is restricted to match the record type.</description>
        <errorConditionFormula>SUBSTITUTE($RecordType.DeveloperName, &apos;_&apos;, &apos; &apos;) != TEXT(project_cloud__Type__c)</errorConditionFormula>
        <errorDisplayField>project_cloud__Type__c</errorDisplayField>
        <errorMessage>The Type field has been deprecated, please use record types to define the type of work.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Subscriptions_Projects_Phase_Tasks_Only</fullName>
        <active>true</active>
        <description>Subscriptions can only be created against Projects, Project Phases and Project Tasks</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Subscription&apos; &amp;&amp;
ISBLANK(project_cloud__Project__c) &amp;&amp;
ISBLANK(project_cloud__Project_Phase__c) &amp;&amp;
ISBLANK(project_cloud__Project_Task__c )</errorConditionFormula>
        <errorMessage>Subscriptions can only be created against Projects, Project Phases and Project Tasks</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entries_Between_Project_Task_Dates</fullName>
        <active>false</active>
        <description>Only allow time entries to be recorded between a Project Task Start and End date</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Time_Entry&apos; &amp;&amp;
NOT(ISBLANK(project_cloud__Project_Task__c)) &amp;&amp; (
	project_cloud__Date__c &lt; project_cloud__Project_Task__r.project_cloud__Start__c
	|| project_cloud__Date__c &gt; project_cloud__Project_Task__r.project_cloud__End__c
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Date__c</errorDisplayField>
        <errorMessage>Date must be between the Start and End date of the Project Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entries_Must_Have_Date</fullName>
        <active>true</active>
        <description>Time Entries require a Date to be selected. And that date must be in the range of the timesheet. And Can&apos;t be changed once set.</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Time_Entry&apos; &amp;&amp; OR(
	ISBLANK(project_cloud__Date__c),
	ISCHANGED(project_cloud__Date__c),
	project_cloud__Date__c &lt; project_cloud__Timesheet__r.project_cloud__Start__c,
	project_cloud__Date__c &gt; project_cloud__Timesheet__r.project_cloud__End__c
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Date__c</errorDisplayField>
        <errorMessage>Time Entries require a Date which can not be changed and is between the date range of the Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entries_Must_Have_Hours</fullName>
        <active>true</active>
        <description>Time Entries require an hours value greater than 0</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Time_Entry&apos; &amp;&amp;
(ISBLANK(project_cloud__Hours__c) || NOT(project_cloud__Hours__c &gt; 0))</errorConditionFormula>
        <errorDisplayField>project_cloud__Hours__c</errorDisplayField>
        <errorMessage>Time Entries require an hours value greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entries_Must_Have_Timesheet</fullName>
        <active>true</active>
        <description>Time Entries require a Timesheet to be selected</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Time_Entry&apos; &amp;&amp; ISBLANK(project_cloud__Timesheet__c)</errorConditionFormula>
        <errorDisplayField>project_cloud__Timesheet__c</errorDisplayField>
        <errorMessage>Time Entries require a Timesheet to be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entries_Not_On_Templates</fullName>
        <active>true</active>
        <description>Time Entries should not be created against Project Templates. If for whatever reason you want to allow this, please disable this validation rule.</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Time_Entry&apos; &amp;&amp; project_cloud__Project_CCPE_Ignore__r.project_cloud__IsTemplate__c</errorConditionFormula>
        <errorMessage>TIme Entries must not be created against Project Templates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entries_On_Incomplete_Tasks_Only</fullName>
        <active>false</active>
        <description>When activated this validation rule prevents Time Entries from being created against Project Tasks which have been marked Completed</description>
        <errorConditionFormula>project_cloud__Project_Task__r.project_cloud__IsComplete__c</errorConditionFormula>
        <errorDisplayField>project_cloud__Project_Task__c</errorDisplayField>
        <errorMessage>This Project Task has been marked Completed. Time can no longer be recorded against it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Time_Entries_Timesheet_Locked</fullName>
        <active>true</active>
        <description>When the status of the Timesheet is Submitted or Approved the hours entered on a Time Entry can&apos;t be modifed</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;Time_Entry&apos; &amp;&amp;
/*New record or hours changed. So mass updates of other values on time entries are possible*/
(ISNEW() || ISCHANGED(project_cloud__Hours__c)) &amp;&amp; (
	ISPICKVAL(project_cloud__Timesheet__r.project_cloud__Status__c, &apos;Submitted&apos;) ||
	ISPICKVAL(project_cloud__Timesheet__r.project_cloud__Status__c, &apos;Approved&apos;)
)</errorConditionFormula>
        <errorMessage>Timesheet is locked. The Time Entry can not be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Type_Required</fullName>
        <active>true</active>
        <description>All Work Objects require a Record Type to be selected. And once set must not be changed.</description>
        <errorConditionFormula>/*Make sure the record type is not blank*/
ISBLANK(RecordTypeId) ||
/*Make sure the record type is not changed, unless it is being set from null (migrated)*/
(ISCHANGED(RecordTypeId) &amp;&amp; NOT(ISBLANK(PRIORVALUE(RecordTypeId))))</errorConditionFormula>
        <errorMessage>All Work Objects require a Record Type which can not be changed.</errorMessage>
    </validationRules>
</CustomObject>